<resources>
    <string name="app_name">Public WiFi Tatarstan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tatarstan free WiFi</string>
    <string name="nav_header_subtitle">Hotspots addresses list</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Hotspot list</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="distance_unknown">Distance: unknown</string>
    <string name="distance_1000">Distance: ~%d m</string>
    <string name="distance_3000">Distance: ~%.1f km</string>
    <string name="distance_max">Distance: ~%d km</string>

    <string name="search_query_hint">Find location</string>

    <string name="request_permissions_text">This app requires access to your location. It required to show nearest wifi hotspots.</string>
    <string name="request_permissions_button">Grant permissions</string>

    <string name="notify_cant_get_geo">Can\'t detect your current location</string>

    <string name="settings_button_update">Update hotspot database</string>
    <string name="settings_notify_count">Current database contains %d hotspots</string>
    <string name="settings_notity_already_fresh">Database already updated!</string>
    <string name="settings_notity_update_success">Database successfully updated!</string>
    <string name="settings_notity_update_failure">Can\'t update database: %s</string>

    <string name="settings_app_theme">App theme</string>
    <string name="settings_theme_system">System theme</string>
    <string name="settings_theme_light">Light theme</string>
    <string name="settings_theme_dark">Dark theme</string>

    <string name="about_title">Public WiFi Tatarstan</string>
    <string name="about_subtitle">List of public hotspots in Tatarstan Republic</string>
    <string name="about_description1">
        This app uses the hotspot database of the Ministry of Digitalization of the Tatarstan.\n
        IMPORTANT: this is NOT an OFFICIAL app! However, you can always use the official map.
    </string>
    <string name="about_description2">
        This app allows you to find a public hotspot even without internet access!\n
        If this app is useful for you, you can support the developer with a donation.
    </string>
    <string name="about_button_open_map">Open Official Map</string>
    <string name="about_button_donate">Donate to app developer</string>


    <string name="about_open_map_url" translatable="false">https://digital.tatarstan.ru/wifi-points.htm</string>
    <string name="about_donate_url" translatable="false">https://pay.cloudtips.ru/p/4d0ac1c9</string>

    <string name="update_hotspot_list_url" translatable="false">https://abdrakhmanov.github.io/tatsphere/wifi/points.json</string>
</resources>