<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/about_app_title"
            android:textAlignment="center"
            android:textSize="14pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_title" />

        <TextView
            android:id="@+id/about_app_subtitle"
            android:textAlignment="center"
            android:textSize="10pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/about_subtitle" />
        <TextView
            android:id="@+id/about_description1"
            android:textAlignment="center"
            android:textSize="8pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_description1" />
        <Button
            android:id="@+id/about_button_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/about_button_open_map" />
        <TextView
            android:id="@+id/about_description2"
            android:textAlignment="center"
            android:textSize="8pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_description2" />
        <Button
            android:id="@+id/about_button_donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_button_donate" />
    </LinearLayout>
</FrameLayout>